--- a/CuiJian/Base.lproj/Main.storyboard
+++ b/CuiJian/Base.lproj/Main.storyboard
@@ -216,7 +216,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QtV-Vh-WKG" customClass="TimelineSlider" customModule="CuiJian" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNb-hx-hif" customClass="TimelineSlider" customModule="CuiJian" customModuleProvider="target">
+                                <rect key="frame" x="-4" y="488" width="328" height="80"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QtV-Vh-WKG" customClass="SlideMaskView" customModule="CuiJian" customModuleProvider="target">
                                 <rect key="frame" x="-4" y="488" width="328" height="80"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -234,14 +238,18 @@
                             <constraint firstItem="8uD-LC-d7m" firstAttribute="leading" secondItem="pxS-TV-KVE" secondAttribute="leadingMargin" constant="-48" id="QOA-0e-Aig"/>
                             <constraint firstItem="Glp-Jn-rHd" firstAttribute="top" secondItem="pxS-TV-KVE" secondAttribute="topMargin" id="Qab-vd-o23"/>
                             <constraint firstItem="idK-VD-9y9" firstAttribute="width" secondItem="pxS-TV-KVE" secondAttribute="width" id="TcW-aC-eZ3"/>
+                            <constraint firstItem="HNb-hx-hif" firstAttribute="leading" secondItem="QtV-Vh-WKG" secondAttribute="leading" id="WmL-5G-hwD"/>
                             <constraint firstItem="Glp-Jn-rHd" firstAttribute="top" secondItem="YV3-YC-fMr" secondAttribute="bottom" constant="-64" id="WnV-bF-04E"/>
                             <constraint firstItem="idK-VD-9y9" firstAttribute="top" secondItem="YV3-YC-fMr" secondAttribute="bottom" constant="-64" id="ayG-B5-1L9"/>
                             <constraint firstItem="QtV-Vh-WKG" firstAttribute="bottom" secondItem="Y9q-As-r0U" secondAttribute="top" id="dAJ-KL-hrL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QtV-Vh-WKG" secondAttribute="trailing" constant="-20" id="eVr-Ho-cFD"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8uD-LC-d7m" secondAttribute="trailing" constant="-56" id="jYH-Bu-AqS"/>
+                            <constraint firstItem="HNb-hx-hif" firstAttribute="height" secondItem="QtV-Vh-WKG" secondAttribute="height" id="l50-JK-O0h"/>
                             <constraint firstItem="Glp-Jn-rHd" firstAttribute="leading" secondItem="pxS-TV-KVE" secondAttribute="leadingMargin" constant="-20" id="lE3-48-Ork"/>
+                            <constraint firstItem="HNb-hx-hif" firstAttribute="bottom" secondItem="QtV-Vh-WKG" secondAttribute="bottom" id="nRY-70-AO4"/>
                             <constraint firstItem="8uD-LC-d7m" firstAttribute="top" secondItem="YV3-YC-fMr" secondAttribute="bottom" constant="-80" id="pjj-7X-9oW"/>
                             <constraint firstItem="idK-VD-9y9" firstAttribute="centerX" secondItem="pxS-TV-KVE" secondAttribute="centerX" id="q2E-cc-Xe7"/>
+                            <constraint firstItem="HNb-hx-hif" firstAttribute="trailing" secondItem="QtV-Vh-WKG" secondAttribute="trailing" id="vz8-5g-mKc"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="关于崔健" id="Onp-n9-j2X">
@@ -253,9 +261,10 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="TimelineSlideView" destination="HNb-hx-hif" id="eSf-wy-iuf"/>
                         <outlet property="bgImageView" destination="8uD-LC-d7m" id="X2V-LE-t1o"/>
                         <outlet property="itemsView" destination="idK-VD-9y9" id="x77-e3-NVx"/>
-                        <outlet property="sliderView" destination="QtV-Vh-WKG" id="ron-4X-p51"/>
+                        <outlet property="slideMaskView" destination="QtV-Vh-WKG" id="Vmq-5Q-KI1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FfH-G8-Ia3" userLabel="First Responder" sceneMemberID="firstResponder"/>
