--- a/CuiJian/TimelineItem.xib
+++ b/CuiJian/TimelineItem.xib
@@ -15,13 +15,13 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="19" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="18" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V7u-XS-rVe">
-                    <rect key="frame" x="92" y="75" width="416" height="43"/>
+                    <rect key="frame" x="20" y="20" width="560" height="43"/>
                     <fontDescription key="fontDescription" type="system" pointSize="36"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lFd-8w-oek">
-                    <rect key="frame" x="92" y="126" width="416" height="425"/>
+                    <rect key="frame" x="20" y="71" width="560" height="509"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -31,26 +31,16 @@
             <constraints>
                 <constraint firstItem="lFd-8w-oek" firstAttribute="leading" secondItem="V7u-XS-rVe" secondAttribute="leading" id="28p-77-k99"/>
                 <constraint firstAttribute="trailing" secondItem="qw8-bL-ONF" secondAttribute="trailing" id="8io-kc-HdJ"/>
-                <constraint firstAttribute="trailing" secondItem="V7u-XS-rVe" secondAttribute="trailing" constant="92" id="DOK-lE-Xfk"/>
-                <constraint firstAttribute="bottom" secondItem="lFd-8w-oek" secondAttribute="bottom" constant="49" id="JnS-Dw-XbP"/>
-                <constraint firstItem="qw8-bL-ONF" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="QFi-vq-Ze2"/>
-                <constraint firstItem="lFd-8w-oek" firstAttribute="bottom" secondItem="qw8-bL-ONF" secondAttribute="bottom" id="SI5-9u-kbm"/>
-                <constraint firstAttribute="bottom" secondItem="lFd-8w-oek" secondAttribute="bottom" constant="49" id="Zws-qV-T4Y"/>
-                <constraint firstItem="V7u-XS-rVe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="92" id="aed-h8-5B2"/>
+                <constraint firstAttribute="trailing" secondItem="V7u-XS-rVe" secondAttribute="trailing" constant="20" symbolic="YES" id="DOK-lE-Xfk"/>
+                <constraint firstAttribute="bottom" secondItem="lFd-8w-oek" secondAttribute="bottom" constant="20" symbolic="YES" id="Zws-qV-T4Y"/>
+                <constraint firstItem="V7u-XS-rVe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="aed-h8-5B2"/>
                 <constraint firstAttribute="bottom" secondItem="qw8-bL-ONF" secondAttribute="bottom" id="bYB-j4-JEl"/>
-                <constraint firstItem="V7u-XS-rVe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="75" id="h6u-az-Yem"/>
+                <constraint firstItem="V7u-XS-rVe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" symbolic="YES" id="h6u-az-Yem"/>
                 <constraint firstItem="qw8-bL-ONF" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="icu-9M-o73"/>
                 <constraint firstItem="lFd-8w-oek" firstAttribute="top" secondItem="V7u-XS-rVe" secondAttribute="bottom" constant="8" symbolic="YES" id="kj3-1z-FgU"/>
-                <constraint firstItem="lFd-8w-oek" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="rVq-MP-S8o"/>
+                <constraint firstItem="qw8-bL-ONF" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="rPC-IG-X5Q"/>
                 <constraint firstItem="lFd-8w-oek" firstAttribute="trailing" secondItem="V7u-XS-rVe" secondAttribute="trailing" id="uGe-5M-xz7"/>
             </constraints>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="JnS-Dw-XbP"/>
-                    <exclude reference="SI5-9u-kbm"/>
-                    <exclude reference="rVq-MP-S8o"/>
-                </mask>
-            </variation>
             <connections>
                 <outlet property="content" destination="lFd-8w-oek" id="39I-u1-4ap"/>
                 <outlet property="image" destination="qw8-bL-ONF" id="iOM-j4-mwF"/>
